--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 </head>
 <body>
     <button onclick="gamestarted();">Start</button>
+    <button onclick="location.reload();">Replay</button>
     <h1 id="gameovertext"></h1>
     <div id="game">
-        <div id="dino"></div>
-        <div id="cactus"></div>
+    <div id="dino"></div>
+    <div id="cactus"></div>
     </div>
     <script src="script.js"></script>
 </body>
