--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <head>
     <title>George Jumps</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
     <button onclick="gamestarted();">Start</button>
     <button onclick="location.reload();">Replay</button>
+    <button id="jumpbtn">Jump</button>
     <h1 id="gameovertext"></h1>
     <div id="game">
     <div id="dino"></div>
